# pastebinapi

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  exceptions.py  http-client.env.json  main.py  pyproject.toml  test_main.http
.github/workflows/: docker-publish.yml  test.yml
models/: api_response.py
models/login/: login_request.py  login_response.py
models/paste/: authenticated_paginated_request_model.py  create_paste_request.py  create_paste_response.py  list_paste_request.py  list_paste_response.py  paste_expiration.py  paste_format.py  paste_item.py  paste_privacy.py
routers/: auth.py  paste.py
services/: pastebin_service.py  xml_service.py
tests/: __init__.py  conftest.py  test_pastebin_service.py  test_routers.py  test_xml_service.py
tests/data/: paste_list.txt
